--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.5.4",
+    "timeago.js": "^4.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
